@@ -1,4 +1,1 @@
 #SourceView default document properties
-
-# soft tabs (tabs emulated by spaces
-source.soft.tabs=false
